# pong

./: CMakeLists.txt
src/: main.cpp
